# ebl_coords_plots

./: README.md  distance.ipynb  plots.ipynb  pyproject.toml  sandbox.py
data/: fixpoints_gr_ringstrecke  grosse_ringstrecke_layout  mock.py
data/gr_ringstrecke_s4/: gr_ringstrecke_s4_01  gr_ringstrecke_s4_02_GER_FUS  gr_ringstrecke_s4_03_GER_107GER  gr_ringstrecke_s4_04  gr_ringstrecke_s4_05  gr_ringstrecke_s4_06  gr_ringstrecke_s4_07  gr_ringstrecke_s4_08  gr_ringstrecke_s4_09  gr_ringstrecke_s4_10  gr_ringstrecke_s4_11  gr_ringstrecke_s4_12  gr_ringstrecke_s4_13  gr_ringstrecke_s4_14
data/run2/: 01_fus3-107-ger1  02_ger1-207-fus3  03_fus3-107-ger1  04_ger1-207-fus3  05_fus3-206-ens-205-dab2  06_dab2-105-ens-106-fus3  07_fus3-206-ens-205-dab2  08_dab2-105-ens-106-fus3  09_ger3-fus3  10_dab2-204-cha-203-blo2  11_blo2-103-cha-104-dab2  12_dab2-204-cha-203-blo2  13_blo2-103-cha-104-dab2  14_dab2-104-cha-103-blo4
data/run3/: putz_run
data/run5/: dab_ew01_dcc019
data/run7/: cha_ew01_dcc0068  cha_ew02_dcc0067  (+8 more)
htmls_dump/: gr_ringstrecke_s4_satelliten_abdeckung.html  gr_singstrecke_s4_14_files.html  gr_singstrecke_s4_14_files_nn_35.html  gr_singstrecke_s4_14_files_nn_35_colored.html  gr_singstrecke_s4_14_files_nn_50.html  gr_singstrecke_s4_14_files_nn_50_colored.html  gr_singstrecke_s4_good_3_files.html  med_filter_k11.html  med_filter_k17.html  med_filter_k29.html  run2_master_blo.html  run8_master_ger.html
src/: constants.py  tvData.py
verteidigung/: all_points_grosse_ringstrecke.html  med_grosse_ringstrecke.html  mess_vs_signal.html  nn_grosse_ringstrecke.html
(+125 files in other folders)
