[tool.poetry]
name = "src"
version = "1.0.0"
description = "Visualize GoT-Coordinates."
authors = [
    "Robin Delimar <robin.delimar@students.fhnw.ch>",
    "Pascal Reiss <pascal.reiss@students.fhnw.ch>"
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.22.4"
pandas = "^2.1.2"
pillow = "^10.1.0"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
seaborn = "^0.13.0"
opencv-python = "^4.8.1.78"
pyvista = "^0.42.3"
trame = "^3.2.8"
trame-vuetify = "^2.3.1"
trame-vtk = "^2.5.9"
ipykernel = "^6.26.0"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core=1.6.1"]
build-backend = "poetry.core.masonry.api"